--- a/dom-project.html
+++ b/dom-project.html
@@ -4,16 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dom Projects</title>
 </head>
 
 <body>
-    <h1>HELOOOOOOOOO</h1>
 
-    <button>HELLO</button>
-    <button class="js-btn">HIII</button>
-
-    <script src="./05_Dom.js"></script>
 </body>
 
 </html>
