--- a/DOM-Projects/dom-project.html
+++ b/DOM-Projects/dom-project.html
@@ -9,6 +9,16 @@
 
 <body>
 
+    <p>Youtube Subscribe Button</p>
+
+    <button onclick=" subscribe();
+    " class="js-subscribe-btn">
+        Subscribe
+    </button>
+
+
+
+    <script src="./dom-project.js"></script>
 </body>
 
 </html>
