--- a/DOM-Projects/rock-paper-sissors.html
+++ b/DOM-Projects/rock-paper-sissors.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Sissors</title>
+    <title>Rock Paper Scissors</title>
 </head>
 
 <body>
+    <p> Rock Paper Scissors </p>
+    <button onclick=" playGame('rock');">Rock</button>
+    <button onclick=" playGame('paper');">Paper</button>
+    <button onclick=" playGame('scissors');">Scissors</button>
 
+    <P class="js-score"></P>
 </body>
 
 </html>
