--- a/colorChanger/index.html
+++ b/colorChanger/index.html
@@ -17,7 +17,7 @@
 
     <h2>Try clicking on above colors to change the Background color of the page</h2>
 
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
